Added missing handling of URL redirection to another protocol during refresh.

+ minor cleanup of unused class field

BUG: 367707